# clio-core

./: .gitignore  AGENTS.md  A_B_TEST_GUIDE.md  CMakeLists.txt  CMakePresets.json  GPU_GETBLOB_NEXT_STEPS.md  install.sh
.github/workflows/: gpu-tests.yml
benchmark_results/: ANALYSIS_REPORT.txt  dedicated_results.csv  default_results.csv  symmetric_results.csv
cmake/: IowarpCoreCommon.cmake
context-runtime/: CMakeLists.txt
context-runtime/benchmark/: wrp_edge_benchmark.cc
context-runtime/modules/MOD_NAME/: CMakeLists.txt
context-runtime/modules/MOD_NAME/include/chimaera/MOD_NAME/: MOD_NAME_client.h  MOD_NAME_gpu_runtime.h  MOD_NAME_tasks.h
context-runtime/modules/MOD_NAME/include/chimaera/MOD_NAME/autogen/: MOD_NAME_gpu_lib_exec.h
context-runtime/modules/MOD_NAME/src/: MOD_NAME_runtime_gpu.cc
context-runtime/modules/MOD_NAME/test/: CMakeLists.txt  test_gpu_parallelism_cpu.cc  test_gpu_parallelism_gpu.cc  test_gpu_queue_stress_gpu.cc  test_gpu_submission_cpu.cc  test_gpu_submission_gpu.cc
context-runtime/modules/admin/: CMakeLists.txt
context-runtime/modules/admin/include/chimaera/admin/: admin_runtime.h  admin_tasks.h
context-runtime/modules/admin/include/chimaera/admin/autogen/: admin_gpu_lib_exec.h
context-runtime/modules/admin/src/: admin_runtime.cc  admin_runtime_gpu.cc
context-runtime/modules/admin/src/autogen/: admin_lib_exec.cc
context-runtime/src/: CMakeLists.txt  chimaera_manager.cc  config_manager.cc  gpu_coroutine_gpu.cc  ipc_manager.cc  megakernel_gpu.cc  module_manager.cc  pool_manager.cc  work_orchestrator.cc  worker.cc  (+1 more)
(+110 files in other folders)
